[package]
name = "pixel-soccer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
atomic_float = "0.1"
clap = { version = "3.1", features = ["derive"] }
image = "0.24"
lazy_static = "1.4"
rand = "0.8.5"
regex = "1.5"
tokio = { version = "1.18", features = ["full"] }
