[package]
name = "pixel-soccer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
atomic_float = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
lazy_static = "1.4"
rand = "0.8.5"
regex = "1.10"
rusttype = "0.9"
tokio = { version = "1.38", features = ["full"] }
